--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,6 @@
     "bower_components"
   ],
   "dependencies": {
-    "jquery": "2.1.3",
-    "singularity": "^1.7.1",
-    "slick-carousel": "^1.6.0"
+    "jquery": "2.1.3"
   }
 }
