--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
     "postinstall": "bower install"
   },
   "devDependencies": {
-    "browser-sync": "2.11.2",
+    "browser-sync": "^2.23.6",
     "gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-cheerio": "^0.6.2",
-    "gulp-concat": "2.6.0",
-    "gulp-concat-css": "^2.2.0",
-    "gulp-csso": "^2.0.0",
-    "gulp-eslint": "2.0.0",
-    "gulp-iconfont": "^8.0.1",
-    "gulp-load-plugins": "1.2.0",
-    "gulp-notify": "2.2.0",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-cheerio": "^0.6.3",
+    "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^3.0.0",
+    "gulp-csso": "^3.0.1",
+    "gulp-eslint": "^4.0.2",
+    "gulp-iconfont": "^9.1.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-notify": "^3.2.0",
     "gulp-pug": "^3.0.3",
-    "gulp-replace": "^0.5.4",
-    "gulp-sass": "2.2.0",
-    "gulp-sourcemaps": "1.6.0",
+    "gulp-replace": "^0.6.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-sprite": "^1.3.1",
     "gulp-svgmin": "^1.2.2",
-    "gulp.spritesmith": "^6.2.1",
-    "rimraf": "2.5.2"
+    "gulp.spritesmith": "^6.9.0",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
-    "normalize.css": "^4.1.1"
+    "normalize.css": "^7.0.0"
   }
 }
