--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.23.6",
-    "gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
@@ -23,6 +23,7 @@
     "gulp-svg-sprite": "^1.3.1",
     "gulp-svgmin": "^1.2.2",
     "gulp.spritesmith": "^6.9.0",
+    "merge-stream": "^1.0.1",
     "rimraf": "^2.6.2"
   },
   "dependencies": {
