--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
   "name": "builder",
   "license": "ISC",
-  "scripts": {
-    "postinstall": "bower install"
-  },
   "devDependencies": {
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.24.4",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^4.1.0",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
-    "gulp-concat-css": "^3.0.0",
+    "gulp-concat-css": "^3.1.0",
     "gulp-csso": "^3.0.1",
     "gulp-eslint": "^4.0.2",
-    "gulp-iconfont": "^9.1.0",
+    "gulp-iconfont": "^10.0.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.2.0",
-    "gulp-pug": "^3.0.3",
-    "gulp-replace": "^0.6.1",
-    "gulp-sass": "^3.1.0",
+    "gulp-pug": "^4.0.1",
+    "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-svg-sprite": "^1.3.1",
+    "gulp-svg-sprite": "^1.4.0",
     "gulp-svgmin": "^1.2.2",
     "gulp.spritesmith": "^6.9.0",
+    "jquery": "^3.3.1",
     "merge-stream": "^1.0.1",
     "rimraf": "^2.6.2"
   },
   "dependencies": {
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^8.0.0"
   }
 }
