--- a/package.json
+++ b/package.json
@@ -2,29 +2,31 @@
   "name": "builder",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.24.4",
+    "browser-sync": "^2.27.5",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-cheerio": "^0.6.3",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-cheerio": "^1.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
-    "gulp-csso": "^3.0.1",
-    "gulp-eslint": "^4.0.2",
-    "gulp-iconfont": "^10.0.1",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-pug": "^4.0.1",
-    "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-svg-sprite": "^1.4.0",
-    "gulp-svgmin": "^1.2.2",
-    "gulp.spritesmith": "^6.9.0",
-    "jquery": "^3.3.1",
-    "merge-stream": "^1.0.1",
-    "rimraf": "^2.6.2"
+    "gulp-csso": "^4.0.1",
+    "gulp-eslint": "^6.0.0",
+    "gulp-iconfont": "^11.0.0",
+    "gulp-load-plugins": "^2.0.7",
+    "gulp-notify": "^4.0.0",
+    "gulp-pug": "^5.0.0",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svgmin": "^4.1.0",
+    "gulp.spritesmith": "^6.12.1",
+    "jquery": "^3.6.0",
+    "merge-stream": "^2.0.0",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "normalize.css": "^8.0.0"
+    "@coreui/coreui": "^4.0.5",
+    "bootstrap": "^5.1.3",
+    "normalize.css": "^8.0.1"
   }
 }
