--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gulp.spritesmith": "^6.12.1",
     "jquery": "^3.6.0",
     "merge-stream": "^2.0.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "sass": "^1.43.3"
   },
   "dependencies": {
     "@coreui/coreui": "^4.0.5",
