--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "builder",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap-icons": "^1.6.1",
     "browser-sync": "^2.27.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
